integracao com api + css

--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
         <input type="text" class="searchbar" placeholder="Buscar..." />
       </div>
       
-    
+      <div class="grid-wrapper">
+        <div class="card-grid" id="cardGrid"></div>
+      </div>
+
+      <script src="/script.js"></script>
 </body>
 
 </html>
