comeco estilizacao card details

--- a/index.html
+++ b/index.html
@@ -16,17 +16,42 @@
       <div class="card-grid" id="cardGrid"></div>
     
       <div id="characterDetails" class="character-details">
-        <div class="detail-card">
-          <img src="" alt="" id="detailImage" />
-          <h2 id="detailName"></h2>
-          <p id="detailStatus"></p>
-          <p id="detailSpecies"></p>
-          <p id="detailGender"></p>
-          <p id="detailLocation"></p>
-          <p id="detailOrigin"></p>
-          <button id="closeDetails">Fechar</button>
-        </div>
+  <div class="detail-card">
+    <img src="" alt="" id="detailImage" />
+    <h2 id="detailName"></h2>
+
+    <div class="details-grid">
+      <div class="info-pair">
+        <h3>Status</h3>
+        <div class="info-box" id="detailStatus"></div>
       </div>
+
+      <div class="info-pair">
+        <h3>Species</h3>
+        <div class="info-box" id="detailSpecies"></div>
+      </div>
+
+      <div class="info-pair">
+        <h3>Gender</h3>
+        <div class="info-box" id="detailGender"></div>
+      </div>
+
+      <div class="info-pair">
+        <h3>Location</h3>
+        <div class="info-box" id="detailLocation"></div>
+      </div>
+
+      <div class="info-pair">
+        <h3>Origin</h3>
+        <div class="info-box" id="detailOrigin"></div>
+      </div>
+    </div>
+
+    <button id="closeDetails">Fechar</button>
+  </div>
+</div>
+
+
     </div>
     
   
