--- a/index.html
+++ b/index.html
@@ -3,58 +3,59 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Rickedex</title>
   <link rel="stylesheet" href="/style.css" />
 </head>
 <body>
-
+ 
+  <div class="title-container">
+    <img src="/assets/Rickedex.png" alt="Rick and Morty Logo" class="logo" />
+  </div>
+  
   <div class="search-container">
     <input type="text" class="searchbar" placeholder="Buscar..." />
   </div>
 
     <div class="content-layout">
-      <div class="card-grid" id="cardGrid"></div>
+    <div class="card-grid" id="cardGrid"></div>
     
-      <div id="characterDetails" class="character-details">
-  <div class="detail-card">
-    <img src="" alt="" id="detailImage" />
-    <h2 id="detailName"></h2>
+  <div id="characterDetails" class="character-details">
+    <div class="detail-card">
+      <img src="" alt="" id="detailImage" />
+      <h2 id="detailName"></h2>
+        <div class="details-grid">
 
-    <div class="details-grid">
-      <div class="info-pair">
-        <h3>Status</h3>
-        <div class="info-box" id="detailStatus"></div>
-      </div>
+          <div class="info-pair">
+            <h3>Status</h3>
+            <div class="info-box" id="detailStatus"></div>
+          </div>
 
-      <div class="info-pair">
-        <h3>Species</h3>
-        <div class="info-box" id="detailSpecies"></div>
-      </div>
+          <div class="info-pair">
+            <h3>Species</h3>
+            <div class="info-box" id="detailSpecies"></div>
+          </div>
 
-      <div class="info-pair">
-        <h3>Gender</h3>
-        <div class="info-box" id="detailGender"></div>
-      </div>
+          <div class="info-pair">
+            <h3>Gender</h3>
+            <div class="info-box" id="detailGender"></div>
+          </div>
 
-      <div class="info-pair">
-        <h3>Location</h3>
-        <div class="info-box" id="detailLocation"></div>
-      </div>
+          <div class="info-pair">
+            <h3>Location</h3>
+            <div class="info-box" id="detailLocation"></div>
+          </div>
 
-      <div class="info-pair">
-        <h3>Origin</h3>
-        <div class="info-box" id="detailOrigin"></div>
-      </div>
+          <div class="info-pair">
+            <h3>Origin</h3>
+            <div class="info-box" id="detailOrigin"></div>
+          </div>
+        </div>
+
+        <button id="closeDetails">Fechar</button>
     </div>
-
-    <button id="closeDetails">Fechar</button>
   </div>
-</div>
 
 
-    </div>
-    
-  
+    </div>      
 
   <!-- Template do card -->
   <template id="card-template">
